| Bug #12720 | SELECT from VIEW doesn't return rows | ||
|---|---|---|---|
| Submitted: | 22 Aug 2005 12:59 | Modified: | 8 Sep 2005 22:34 |
| Reporter: | Victoria Reznichenko | ||
| Status: | Closed | ||
| Category: | Server: Optimizer | Severity: | S3 (Non-critical) |
| Version: | 5.0.12 | OS: | Linux (linux) |
| Assigned to: | Bugs System | Target Version: | |
[22 Aug 2005 12:59]
Victoria Reznichenko
[30 Aug 2005 1:13]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/internals/29003
[30 Aug 2005 15:08]
Sergey Petrunya
Fix pushed into 5.0.12 tree. Bug description for the changelog: Queries with subqueries, where the inner subquery uses range or index_merge access method could return wrong results.
[1 Sep 2005 2:48]
Paul DuBois
Noted in 5.0.12 changelog. Sergey, thanks for the bug description!
[6 Sep 2005 23:49]
Sergey Petrunya
There was an error: the bug was fixed not in 5.0.12, but in 5.0.13. Please update the documentation.
[8 Sep 2005 22:34]
Paul DuBois
I've moved the changelog entry.
