Fix for BUG#12720: In QUICK_RANGE_SELECT::reset(), reset in_range so next get_next() call doesn't continue reading the last range.

mysql-test/r/index_merge_innodb.result:
  Testcase for BUG#12720
mysql-test/t/index_merge_innodb.test:
  Testcase for BUG#12720