sql/opt_range.cc
@@ -6043,6 +6043,7 @@ int QUICK_RANGE_SELECT::reset()
   DBUG_ENTER("QUICK_RANGE_SELECT::reset");
   next=0;
   range= NULL;
+  in_range= FALSE;
   cur_range= (QUICK_RANGE**) ranges.buffer;
 
   if (file->inited == handler::NONE && (error= file->ha_index_init(index)))
